--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-react-css-modules": "^3.4.2",
     "clean-webpack-plugin": "^0.1.19",
+    "compression": "^1.7.3",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.4",
     "css-hot-loader": "^1.4.2",
