fix: text-overflow

--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "start": " ./scripts/dev_server.sh",
     "start:prod": "node ./bin/server.js",
     "build": "yarn clean && cross-env NODE_ENV=production webpack --progress && react-snap",
-    "upload": "./scripts/publish.sh"
+    "upload": "yarn build && ./scripts/publish.sh"
   }
 }
