--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "compression": "^1.7.3",
     "compression-webpack-plugin": "^1.1.11",
+    "consolidate": "^0.15.1",
     "cross-env": "^5.1.4",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^0.28.11",
@@ -30,6 +31,7 @@
     "handlebars": "^4.0.11",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "metalsmith": "^2.3.0",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.4",
@@ -46,7 +48,8 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "inquirer": "^6.2.0"
   },
   "dependencies": {
     "react": "^16.3.2",
@@ -68,6 +71,7 @@
     "clean": "rm -rf ./dist",
     "start": " ./scripts/dev_server.sh",
     "start:prod": "node ./bin/server.js",
+    "article": "node ./scripts/createArticle",
     "build": "yarn clean && cross-env NODE_ENV=production webpack --progress && react-snap",
     "upload": "yarn build && ./scripts/publish.sh"
   }
